syntax = "proto3";

package protobufs.common.v1;

message MatchData {
    string match_id = 1;
    string map_id  = 2;
    uint64 game_length = 3;
    uint64 game_start = 4;
    string prov_flow_id = 5;
    bool is_completed = 6;
    string custom_name = 7;
    string queue_id = 8;
    string game_mode = 9;
    bool is_ranked = 10;
    string season_id = 11;
}

message PlayerStats {
    uint64 score = 1;
    uint64 rounds_played = 2;
    uint64 kills = 3;
    uint64 deaths = 4;
    uint64 assists = 5;
    uint64 play_time = 6;
}

message PlayerData {
    string puuid = 1;
    string game_name = 2;
    string tag_line = 3;
    string team_id = 4;
    string party_id = 5;
    string character_id = 6;
    PlayerStats stats = 7;
    string competitive_tier = 8;
    string player_card = 9;
    string player_title = 10;
}

message TeamData {
    string team_id = 1;
    bool won = 2;
    uint64 rounds_played = 3;
    uint64 rounds_won = 4;
    uint64 num_points = 5;
}

message LocationData {
    int64 x = 1;
    int64 y = 2;
}
message PlayerLocations {
    string puuid = 1;
    double view_radians = 2;  // Changed to double
    LocationData location = 3;
}

message FinishingDamageData {
    string damage_type = 1;
    string damage_item = 2;
    bool is_secondary_fire_mode = 3;  // Changed to bool
}

message KillData {
    uint64 game_start = 1;  // Changed to uint64
    uint64 round_start = 2;  // Changed to uint64
    string killer = 3;  // PUUID
    string victim = 4;  // PUUID
    LocationData victim_location = 5;
    repeated string assistants = 6;  // List of PUUIDs
    repeated PlayerLocations player_locations = 7;
    FinishingDamageData finishing_damage = 8;

}

message EconomyData {
    uint64 loadout_value = 1; // Changed to uint64
    string weapon = 2;
    string armor = 3;
    uint64 remaining = 4; // Changed to uint64
    uint64 spent = 5; // Changed to uint64
}

message DamageData {
    string receiver = 1;  // PUUID
    uint64 damage = 2;
    uint64 leg_shots = 3;
    uint64 body_shots = 4;
    uint64 head_shots = 5;

}
message PlayerRoundStatsData {
    string puuid = 1;
    repeated KillData kills = 2;
    repeated DamageData damage = 3;
    uint64 score = 4;  // Changed to uint64
    EconomyData economy = 5;

}
message RoundsData {
    uint64 round_num = 1;
    string round_result = 2;
    string round_ceremony = 3;
    string winning_team = 4;
    string bomb_planter = 5;
    string bomb_defuser = 6;
    uint64 plant_round_time = 7;
    repeated PlayerLocations plant_player_locations = 8;
    LocationData plant_location = 9;
    string plant_site = 10;
    uint64 defuse_round_time = 11;
    repeated PlayerLocations defuse_player_locations = 12;
    LocationData defuse_location = 13;
    repeated PlayerRoundStatsData player_stats = 14;
    string round_result_code = 15;
}
