syntax = "proto3";
package protobufs.services.v1;
import "common/v1/match.proto";

/*
 * Riot Ingest service
 * This service provides various RPC methods to retrieve data related to Riot Games.
*/
service RiotIngestService {
    // Used to get matchdata information based on a matchid.
    rpc GetMatchData(GetMatchDataRequest) returns (GetMatchDataResponse) {}

    // Used to get puuid data based on a game name and tagline.
    rpc GetAccountByRiotID(GetAccountByRiotIDRequest) returns (GetAccountByRiotIDResponse) {}

    // Used to obtain a list of matches related to a specific player.
    rpc GetPlayerMatches(GetPlayerMatchesRequest) returns (GetPlayerMatchesResponse) {}

    // Used to fetch content-related data, which might include assets, updates, or other information.
    rpc GetContentData(GetContentDataRequest) returns (GetContentDataResponse) {}

    // Used to get data related to leaderboards, possibly for competitive rankings.
    rpc GetLeaderboardData(GetLeaderboardDataRequest) returns (GetLeaderboardDataResponse) {}
}

/*
 * ACCOUNT-V1 (/riot/account/v1/accounts/by-riot-id/{gameName}/{tagLine})
 * Used to get puuid based on a game name and tagline.
*/
message GetAccountByRiotIDRequest {
    string game_name = 1;
    string tag_line = 2;
}

message GetAccountByRiotIDResponse {
    string game_name = 1;
    string tag_line = 2;
    string puu_id = 3;
}

/*
 * VAL-MATCH-V1 (/val/match/v1/matchlists/by-puuid/{puuid})
 * Uses puuid to obtain a list which contains other lists that specify a matchid, queueid, and gameStartTimeMillis.
 */
message GetPlayerMatchesRequest {
    string puu_id = 1;
}

message PlayersMatches {
  string match_id = 1;
  string game_start_time = 2;
  string queue_id = 3;
}

message GetPlayerMatchesResponse {
    string puu_id = 1;
    repeated PlayersMatches history = 2;
}

/*
 * VAL-CONTENT-V1 (/val/content/v1/contents)
 * Used to fetch content-related data, which might include assets, updates, or other information.
*/

message GetContentDataRequest {}

message Languages {
    string arabic = 1;
    string german = 2;
    string english = 3;
    string spanish_spain = 4;
    string spanish_mexico = 5;
    string french = 6;
    string indonesian = 7;
    string italian = 8;
    string japanese = 9;
    string korean = 10;
    string polish = 11;
    string portuguese_brazil = 12;
    string russian = 13;
    string thai = 14;
    string turkish = 15;
    string vietnamese = 16;
    string chinese_simplified = 17;
    string chinese_traditional = 18;
  }

message GameInformation{
    string name = 1;
    Languages localized_names  = 2;
    string player_id = 3;
    string asset_name = 4;
}

message GameModesInformation{
    string name = 1;
    Languages localized_names  = 2;
    string player_id = 3;
    string asset_name = 4;
    string asset_path = 5;
}

message ActsInformation{
    string player_id = 1;
    string parent_id = 2;
    string type = 3;
    string name = 4;
    Languages localized_names  = 5;
    string is_active = 6;
}

message GetContentDataResponse {
    repeated GameInformation characters_info = 1;
    repeated GameInformation maps_info = 2;
    repeated GameInformation chromas_info = 3;
    repeated GameInformation skins_info = 4;
    repeated GameInformation skin_levels_info = 5;
    repeated GameInformation equips_info = 6;
    repeated GameModesInformation game_modes_info = 7;
    repeated GameInformation sprays_info = 8;
    repeated GameInformation spray_levels_info = 9;
    repeated GameInformation charms_info = 10;
    repeated GameInformation charm_levels_info = 11;
    repeated GameInformation player_cards_info = 12;
    repeated GameInformation player_titles_info = 13;
    repeated ActsInformation acts_info = 14;
    repeated GameInformation ceremonies_info = 15;
    string version = 16;
}

/*
 * VAL-RANKED-V1 (/val/ranked/v1/leaderboards/by-act/{actId})
 * Used to get data related to leaderboards, possibly for competitive rankings.
*/

// buf:lint:ignore ENUM_VALUE_PREFIX
// buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
enum ActId {
    CLOSED_BETA_ACT_1 = 0;
    CLOSED_BETA_ACT_2 = 1;
    CLOSED_BETA_ACT_3 = 2;
    EPISODE_1_ACT_1 = 3;
    EPISODE_1_ACT_2 = 4;
    EPISODE_1_ACT_3 = 5;
    EPISODE_2_ACT_1 = 6;
    EPISODE_2_ACT_2 = 7;
    EPISODE_2_ACT_3 = 8;
    EPISODE_3_ACT_1 = 9;
    EPISODE_3_ACT_2 = 10;
    EPISODE_3_ACT_3 = 11;
    EPISODE_4_ACT_1 = 12;
    EPISODE_4_ACT_2 = 13;
    EPISODE_4_ACT_3 = 14;
    EPISODE_5_ACT_1 = 15;
    EPISODE_5_ACT_2 = 16;
    EPISODE_5_ACT_3 = 17;
    EPISODE_6_ACT_1 = 18;
    EPISODE_6_ACT_2 = 19;
    EPISODE_6_ACT_3 = 20;
    EPISODE_7_ACT_1 = 21;
  }

// buf:lint:ignore ENUM_VALUE_PREFIX
// buf:lint:ignore ENUM_ZERO_VALUE_SUFFIX
enum Shard {
    NA = 0;
    LATAM = 1;
    BR = 2;
    EU = 3;
    AP = 4;
    KR = 5;
}

message GetLeaderboardDataRequest {
    ActId act_id = 1;
}
message PlayerDto {
    string puu_id = 1;
    string game_name = 2;
    string tag_line = 3;
    uint64 leaderboard_rank = 4;
    uint64 ranked_rating = 5;
    uint64 number_of_wins = 6;
}
message GetLeaderboardDataResponse {
    ActId act_id = 1;
    Shard shard = 2;
    uint64 total_players = 3;
    repeated PlayerDto players = 4;
}

message GetMatchDataRequest {
    string match_id = 1;
}

message GetMatchDataResponse {
    common.v1.MatchInformation matches_info = 1;
    repeated common.v1.PlayerInformation players_info = 2;
    repeated common.v1.TeamsInformation teams_info = 3;
    repeated common.v1.RoundsInformation rounds_info = 4;
}
